--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - find . -name \*.json  | xargs -I {} jsonlint -q {}
   - ajv validate -s compat-data.schema.old.json -d "api/**/*.json"
   - ajv validate -s compat-data.schema.json -d "css/**/*.json"
-  - ajv validate -s compat-data.schema.old.json -d "http/**/*.json"
+  - ajv validate -s compat-data.schema.json -d "http/**/*.json"
   - ajv validate -s compat-data.schema.json -d "javascript/**/*.json"
   - ajv validate -s compat-data.schema.json -d "webextensions/**/*.json"
   - ajv validate -s compat-data.schema.json -d "test/sample-data.json"
